codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_reset_confirmation.snap
---
source: tui/src/chatwidget/tests/usage.rs
assertion_line: 499
expression: "render_bottom_popup(&chat, 80)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Use this reset?
  Full reset (Weekly + 5 hr) · Expires 09:39 on 18 Jun 2026


  1. Yes, use reset  Reset your weekly and 5-hour usage limits.
› 2. No, go back     Choose a different reset

  enter confirm · esc back
