codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_switch_prompt_popup.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1781
expression: popup
---
 Elpis · model gpt-5 default · location /tmp/project

  Approaching rate limits
  Switch to gpt-6-luna for lower credit usage?


› 1. Switch to gpt-6-luna                   Fast and affordable model for easier
                                            tasks.
  2. Keep current model
  3. Keep current model (never show again)  Hide future rate limit reminders
                                            about switching models

  enter select · esc back
