codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__reasoning_delta_restores_recreated_status_indicator.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"Checking files and preparing a response (0s • e…│CONTEXT LEDGER  context not    "
"                                                │measured · ≈0 source estimates "
"┌──────────────────────────────────────────────┐│Tab controls · Alt+C hide ·    "
"› Ask Elpis to do anything                     ││Ctrl+click open file           "
"└──────────────────────────────────────────────┘│                               "
"        100% context left · Tab Context Ledger  │SMART PRUNE          [···] SYNC"
"                                                │Reading current thread state   "
"                                                │Syncing… · /smart-prune on|off "
"                                                │sets an explicit state         "
"                                                │                               "
"                                                │SUBAGENTS             [━━━●] ON"
"                                                │May delegate to other agents   "
"                                                │                               "
"                                                │CONTEXT WINDOW  usage          "
"                                                │unavailable                    "
"                                                │Context measurement unavailable"
"                                                │until the first request        "
"                                                │snapshot                       "
"                                                │                               "
"                                                │No portable context is         "
"                                                │available.                     "
