codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__reasoning_shortcut_max_plan_footer.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: snapshot
---
"                                                                                "
" Elpis · model gpt-5.5 max · location /tmp/project                              "
"┌──────────────────────────────────────────────┐│CONTEXT LEDGER  context not    "
"› Ask Elpis to do anything                     ││measured · ≈0 source estimates "
"└──────────────────────────────────────────────┘│Tab controls · Alt+C hide ·    "
"  Plan mode (shift+tab to cycle)                │Ctrl+click open file           "
"                                                │                               "
"                                                │SMART PRUNE          [···] SYNC"
"                                                │Reading current thread state   "
"                                                │Syncing… · /smart-prune on|off "
"                                                │sets an explicit state         "
"                                                │                               "
"                                                │SUBAGENTS             [━━━●] ON"
"                                                │May delegate to other agents   "
"                                                │                               "
"                                                │CONTEXT WINDOW  usage          "
"                                                │unavailable                    "
"                                                │Context measurement unavailable"
"                                                │until the first request        "
"                                                │snapshot                       "
"                                                │                               "
"                                                │No portable context is         "
"                                                │available.                     "
